# fleetmgr

./: .gitignore  LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt  gen_all.sh
cpp/bimpl/: HttpsClient.cpp  HttpsClient.hpp  Listener.cpp  Listener.hpp  TcpSocket.cpp  TcpSocket.hpp  Timer.cpp  Timer.hpp  TimerThread.cpp  TimerThread.hpp  UdpSocket.cpp  UdpSocket.hpp
cpp/examples/: .gitignore
cpp/examples/FmCppDeviceSim/: CMakeLists.txt
cpp/include/: Device.hpp  IClient.hpp  Pilot.hpp
cpp/include/backend/: ChannelsHandler.hpp  ClientBackend.hpp  HeartbeatHandler.hpp
cpp/include/core/: CoreClient.hpp
cpp/include/core/https/: IHttpsClient.hpp
cpp/include/event/input/: UserEvent.hpp
cpp/include/event/input/user/: CloseChannels.hpp  OpenChannels.hpp  Operate.hpp  ReleaseAccepted.hpp  ReleaseRejected.hpp  RequestControl.hpp  UserEvent.hpp
cpp/include/event/output/: ChannelsClosed.hpp  ChannelsClosing.hpp  ChannelsOpened.hpp  Error.hpp  FacadeEvent.hpp  HandoverAccepted.hpp  HandoverRejected.hpp  Message.hpp  OperationEnded.hpp  OperationStarted.hpp  ProcedureRejected.hpp  ReleaseControl.hpp
cpp/include/https/: IHttpsClient.hpp
cpp/include/state/: HeartbeatHandler.hpp  IState.hpp
cpp/include/state/device/: Connected.hpp  Connecting.hpp  Disconnected.hpp  Disconnecting.hpp
cpp/include/state/device/connected/: Flying.hpp  Ready.hpp  Recovering.hpp  Released.hpp  Releasing.hpp
cpp/include/state/pilot/: Connected.hpp  Connecting.hpp  Disconnected.hpp  Disconnecting.hpp
cpp/include/state/pilot/connected/: ClosingChannels.hpp  Controlling.hpp  OpeningChannels.hpp  Operating.hpp  Recovering.hpp  Released.hpp  Releasing.hpp  ReleasingControl.hpp  RequestingControl.hpp  Spectating.hpp  ValidatingChannels.hpp
cpp/include/system/: IStateMachine.hpp  ITimer.hpp
cpp/include/timer/: ITimer.hpp
cpp/include/traffic/: Channel.hpp  ChannelImpl.hpp  IChannel.hpp
cpp/include/traffic/socket/: ISocket.hpp
cpp/source/: Device.cpp  IClient.cpp  Pilot.cpp
cpp/source/backend/: ChannelsHandler.cpp  ClientBackend.cpp  HeartbeatHandler.cpp
cpp/source/core/: CoreClient.cpp
cpp/source/core/https/: IHttpsClient.cpp
cpp/source/event/input/: UserEvent.cpp
cpp/source/event/input/user/: CloseChannels.cpp  OpenChannels.cpp  Operate.cpp  ReleaseAccepted.cpp  ReleaseRejected.cpp  RequestControl.cpp  UserEvent.cpp
cpp/source/event/output/: ChannelsClosed.cpp  ChannelsClosing.cpp  ChannelsOpened.cpp  Error.cpp  FacadeEvent.cpp  HandoverAccepted.cpp  HandoverRejected.cpp  Message.cpp  OperationEnded.cpp  OperationStarted.cpp  ProcedureRejected.cpp  ReleaseControl.cpp
cpp/source/https/: IHttpsClient.cpp
cpp/source/state/: HeartbeatHandler.cpp  IState.cpp
cpp/source/state/device/: Connected.cpp  Connecting.cpp  Disconnected.cpp  Disconnecting.cpp
cpp/source/state/device/connected/: Flying.cpp  Ready.cpp  Recovering.cpp  Released.cpp  Releasing.cpp
cpp/source/state/pilot/: Connected.cpp  Connecting.cpp  Disconnected.cpp  Disconnecting.cpp
cpp/source/state/pilot/connected/: ClosingChannels.cpp  Controlling.cpp  OpeningChannels.cpp  Operating.cpp  Recovering.cpp  Released.cpp  Releasing.cpp  ReleasingControl.cpp  RequestingControl.cpp  Spectating.cpp  ValidatingChannels.cpp
cpp/source/system/: ITimer.cpp
cpp/source/timer/: ITimer.cpp
cpp/source/traffic/: Channel.cpp  ChannelImpl.cpp
cpp/source/traffic/socket/: ISocket.cpp
examples/cpp/FmCppDeviceSim/: CMakeLists (another copy).txt  CMakeLists (copy).txt  CMakeLists.txt  DeviceSimulator.cpp  DeviceSimulator.hpp  ISimulator.cpp  ISimulator.hpp  PilotSimulator.cpp  PilotSimulator.hpp  deviceSim.cpp  main.cpp  pilotSim.cpp
examples/cpp/FmCppDeviceSim/example/: AsioHttpsClient.cpp  AsioHttpsClient.hpp  AsioListener.cpp  AsioListener.hpp  AsioTcpClient.cpp  AsioTcpClient.hpp  AsioTcpSocket.cpp  AsioTcpSocket.hpp  AsioUdpClient.cpp  AsioUdpClient.hpp  AsioUdpSocket.cpp  AsioUdpSocket.hpp  BoostHttpsClient.cpp  BoostHttpsClient.hpp  BoostListener.cpp  BoostListener.hpp  BoostTcpSocket.cpp  BoostTcpSocket.hpp  BoostUdpSocket.cpp  BoostUdpSocket.hpp  Timer.cpp  Timer.hpp  TimerThread.cpp  TimerThread.hpp
examples/cpp/standalone/: CMakeLists (another copy).txt  CMakeLists (copy).txt
java/: Device.java  Pilot.java  build.gradle
java/FmClientSdk/: build.gradle
java/event/input/: Event.java
java/event/input/connection/: ConnectionEvent.java
java/event/input/user/: ReleaseAccepted.java  ReleaseRejected.java  UserEvent.java
java/event/output/facade/: ChannelsClosed.java  HandoverAccepted.java  OperationStarted.java
java/sdk/: Client.java  Device.java
java/sdk/core/: CoreClient.java
java/sdk/event/input/connection/: Received.java
java/sdk/event/input/user/: CloseChannels.java  OpenChannels.java  Operate.java  ReleaseAccepted.java
java/sdk/event/output/facade/: ChannelsClosed.java  ChannelsOpened.java  Error.java  FacadeEvent.java  HandoverRejected.java  Message.java  OperationEnded.java
java/sdk/state/: HeartbeatHandler.java
java/sdk/state/device/: Connected.java  Connecting.java  Disconnecting.java
java/sdk/state/device/connected/: Flying.java  Ready.java  Recovering.java  Released.java
java/sdk/state/pilot/: Connected.java  Disconnecting.java
java/sdk/traffic/: UdpChannel.java
java/sdk/traffic/socket/: Socket.java  TcpSocket.java  UdpSocket.java
java/state/: State.java
java/state/device/: Connecting.java  Disconnected.java  Disconnecting.java
java/state/device/connected/: Flying.java  Releasing.java
java/state/pilot/: Connecting.java  Disconnected.java  Disconnecting.java
java/state/pilot/connected/: Controlling.java  Releasing.java  Spectating.java
java/traffic/: Channel.java
java/traffic/socket/: UdpSocket.java
proto/common/: add_channels.proto  attach_channels.proto  channel.proto  channel_management.proto
proto/core/: operate.proto
proto/facade/control/: facade_service.proto  heartbeat.proto
proto/sdk/common/: role.proto
proto/sdk/core/: list_devices.proto  operate.proto
proto/sdk/facade/control/: facade_service.proto
(+174 files in other folders)
